--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.3
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
 loader_version=0.15.9
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+maven_group=foundry
+archives_base_name=veil-example-mod
 
 # Dependencies
-fabric_version=0.96.11+1.20.4
+fabric_version=0.92.0+1.20.1
+veil_version=1.0.0.139
