Added test for cubemap and fbo wrapper

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,5 @@ archives_base_name=veil-example-mod
 
 # Dependencies
 fabric_version=0.92.0+1.20.1
-veil_version=1.0.0.254
+#veil_version=1.0.0
+veil_version=1.0.0.285
